--- a/index.html
+++ b/index.html
@@ -105,6 +105,27 @@
         </section>
       </main>
     </div>
+    <footer>
+        <address>
+            <a href="">
+                WebStudio
+            </a>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <ul>
+                <li>
+                    <a href="">info@example.com</a>
+                    
+
+                </li>
+                <li>
+                    <a href="">+38 099 111 11 11</a>
+                </li>
+            </ul>
+
+
+        </address>
+
+    </footer>
 </body>
 
 </html>
