--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        </nav>
           <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
      
 
@@ -126,7 +126,7 @@
                     
                 </li>
                 <li>
-                    <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+                    <a href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
 
