--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         </section>
         <section>
-            <h2>Наши преимущества</h2>
+            <h2 hidden>Наши преимущества</h2>
             <ul>
                
 
